完善聚合函数的增删改查功能，还差修改功能没有完成